--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -98,6 +98,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -110,6 +111,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseInfo\AttachmentAppService.cs" />
+    <Compile Include="BaseInfo\Dto\AttachmentEditDto.cs" />
+    <Compile Include="BaseInfo\Dto\AttachmentListDto.cs" />
+    <Compile Include="BaseInfo\Dto\AttachmentQueryDto.cs" />
     <Compile Include="BaseInfo\Dto\LayerEditDto.cs" />
     <Compile Include="BaseInfo\Dto\LayerListDto.cs" />
     <Compile Include="BaseInfo\Dto\LayerQueryDto.cs" />
@@ -117,6 +122,7 @@
     <Compile Include="BaseInfo\Dto\SysDictionaryListDto.cs" />
     <Compile Include="BaseInfo\Dto\SysDictionaryQueryDto.cs" />
     <Compile Include="BaseInfo\Dto\TreeItemDto.cs" />
+    <Compile Include="BaseInfo\IAttachmentAppService.cs" />
     <Compile Include="BaseInfo\ILayerAppService.cs" />
     <Compile Include="BaseInfo\ISysDictionaryAppService.cs" />
     <Compile Include="BaseInfo\LayerAppService.cs" />
