--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -94,6 +94,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseInfo\Attachment.cs" />
+    <Compile Include="BaseInfo\IAttachmentRepository.cs" />
     <Compile Include="BaseInfo\ILayerRepository.cs" />
     <Compile Include="BaseInfo\ISysDictionaryRepository.cs" />
     <Compile Include="BaseInfo\Layer.cs" />
