--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -247,6 +247,10 @@
     <Compile Include="Migrations\201704061424170_modifytable_budgetreceipt2.Designer.cs">
       <DependentUpon>201704061424170_modifytable_budgetreceipt2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704101317542_addtable_attachment.cs" />
+    <Compile Include="Migrations\201704101317542_addtable_attachment.Designer.cs">
+      <DependentUpon>201704101317542_addtable_attachment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\SeedData\DefaultCreator.cs" />
@@ -260,6 +264,7 @@
     <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\StockRepository.cs" />
     <Compile Include="Repositories\SysDictionaryRepository.cs" />
+    <Compile Include="TAF.EntityFramework\Repositories\AttachmentRepository.cs" />
     <Compile Include="TAFDataModule.cs" />
     <Compile Include="Migrations\SeedData\DefaultEditionsCreator.cs" />
     <Compile Include="Migrations\SeedData\DefaultLanguagesCreator.cs" />
@@ -376,10 +381,11 @@
     <EmbeddedResource Include="Migrations\201704061424170_modifytable_budgetreceipt2.resx">
       <DependentUpon>201704061424170_modifytable_budgetreceipt2.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704101317542_addtable_attachment.resx">
+      <DependentUpon>201704101317542_addtable_attachment.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TAF.EntityFramework\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
