完成年度收入预算表导入

--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -102,7 +102,7 @@
     <Compile Include="BaseInfo\SysDictionary.cs" />
     <Compile Include="BaseInfo\DictionaryCategory.cs" />
     <Compile Include="Finance\BudgetReceipt.cs" />
-    <Compile Include="Finance\BundgetType.cs" />
+    <Compile Include="Finance\BungetType.cs" />
     <Compile Include="Finance\IBudgetReceiptRepository.cs" />
     <Compile Include="Storage\Delivery.cs" />
     <Compile Include="Storage\Entry.cs" />
