--- a/TAF.Application/packages.config
+++ b/TAF.Application/packages.config
@@ -10,7 +10,9 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net452" />
+  <package id="NPOI" version="2.3.0" targetFramework="net452" />
   <package id="sharpconfig" version="1.5.6" targetFramework="net452" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.2.0" targetFramework="net452" />
   <package id="System.Linq.Dynamic" version="1.0.6" targetFramework="net452" />
   <package id="TAF.Utility" version="1.0.0.5" targetFramework="net452" />
