--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -251,6 +251,10 @@
     <Compile Include="Migrations\201704101317542_addtable_attachment.Designer.cs">
       <DependentUpon>201704101317542_addtable_attachment.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704131308534_modifytable_budgetreceipt3.cs" />
+    <Compile Include="Migrations\201704131308534_modifytable_budgetreceipt3.Designer.cs">
+      <DependentUpon>201704131308534_modifytable_budgetreceipt3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\SeedData\DefaultCreator.cs" />
@@ -383,6 +387,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704101317542_addtable_attachment.resx">
       <DependentUpon>201704101317542_addtable_attachment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704131308534_modifytable_budgetreceipt3.resx">
+      <DependentUpon>201704131308534_modifytable_budgetreceipt3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
