--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -255,11 +255,20 @@
     <Compile Include="Migrations\201704131308534_modifytable_budgetreceipt3.Designer.cs">
       <DependentUpon>201704131308534_modifytable_budgetreceipt3.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704171343102_addTable_BudgetOutlays.cs" />
+    <Compile Include="Migrations\201704171343102_addTable_BudgetOutlays.Designer.cs">
+      <DependentUpon>201704171343102_addTable_BudgetOutlays.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704171431401_addTable_BudgetOutlays2.cs" />
+    <Compile Include="Migrations\201704171431401_addTable_BudgetOutlays2.Designer.cs">
+      <DependentUpon>201704171431401_addTable_BudgetOutlays2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\SeedData\DefaultCreator.cs" />
     <Compile Include="Migrations\SeedData\DefaultRolePermissionCreator.cs" />
     <Compile Include="Migrations\SeedData\DefaultRolesCreator.cs" />
+    <Compile Include="Repositories\BudgetOutlayRepository.cs" />
     <Compile Include="Repositories\BudgetReceiptRepository.cs" />
     <Compile Include="Repositories\DeliveryBillRepository.cs" />
     <Compile Include="Repositories\EntryBillRepository.cs" />
@@ -390,6 +399,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704131308534_modifytable_budgetreceipt3.resx">
       <DependentUpon>201704131308534_modifytable_budgetreceipt3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704171343102_addTable_BudgetOutlays.resx">
+      <DependentUpon>201704171343102_addTable_BudgetOutlays.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704171431401_addTable_BudgetOutlays2.resx">
+      <DependentUpon>201704171431401_addTable_BudgetOutlays2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
