--- a/TAF.Web/SCBF.Web.csproj
+++ b/TAF.Web/SCBF.Web.csproj
@@ -799,6 +799,7 @@
     <Content Include="Scripts\budgetReceipt2.js" />
     <Content Include="Scripts\budgetReceipt3.js" />
     <Content Include="Scripts\budgetReceipt.js" />
+    <Content Include="Scripts\budgetSummary.js" />
     <Content Include="Scripts\Common\defaultBase.js" />
     <Content Include="Scripts\Common\layoutBase.js" />
     <Content Include="Scripts\Common\mixin.js" />
@@ -936,6 +937,7 @@
     <Content Include="Views\BudgetOutlay\_BudgetOutlayIndex.cshtml" />
     <Content Include="Views\BudgetReceipt\_BudgetReceiptIndex3.cshtml" />
     <Content Include="Views\BudgetReceipt\_BudgetReceiptIndex2.cshtml" />
+    <Content Include="Views\BudgetOutlay\_BudgetSummary.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
