--- a/TAF.Web/SCBF.Web.csproj
+++ b/TAF.Web/SCBF.Web.csproj
@@ -795,6 +795,7 @@
     <Content Include="Content\toastr.less" />
     <Content Include="Scripts\Account\changePwd.js" />
     <Content Include="Scripts\Account\user.js" />
+    <Content Include="Scripts\actualOutlay.js" />
     <Content Include="Scripts\budgetOutlay.js" />
     <Content Include="Scripts\budgetReceipt2.js" />
     <Content Include="Scripts\budgetReceipt3.js" />
@@ -885,6 +886,7 @@
     <Compile Include="assets\js\ueditor\net\App_Code\PathFormater.cs" />
     <Compile Include="assets\js\ueditor\net\App_Code\UploadHandler.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ActualOutlayController.cs" />
     <Compile Include="Controllers\BudgetOutlayController.cs" />
     <Compile Include="Controllers\BudgetReceiptController.cs" />
     <Compile Include="Controllers\DeliveryBillController.cs" />
@@ -938,6 +940,7 @@
     <Content Include="Views\BudgetReceipt\_BudgetReceiptIndex3.cshtml" />
     <Content Include="Views\BudgetReceipt\_BudgetReceiptIndex2.cshtml" />
     <Content Include="Views\BudgetOutlay\_BudgetSummary.cshtml" />
+    <Content Include="Views\ActualOutlay\_ActualOutlayIndex.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
