--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -293,6 +293,10 @@
     <Compile Include="Migrations\201704251404577_updatetable_receipt_1.Designer.cs">
       <DependentUpon>201704251404577_updatetable_receipt_1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704271308345_modifyTable_product6.cs" />
+    <Compile Include="Migrations\201704271308345_modifyTable_product6.Designer.cs">
+      <DependentUpon>201704271308345_modifyTable_product6.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\SeedData\DefaultCreator.cs" />
@@ -458,6 +462,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704251404577_updatetable_receipt_1.resx">
       <DependentUpon>201704251404577_updatetable_receipt_1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704271308345_modifyTable_product6.resx">
+      <DependentUpon>201704271308345_modifyTable_product6.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
