--- a/SCBF.Service/packages.config
+++ b/SCBF.Service/packages.config
@@ -1,23 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Abp" version="1.0.0.0" targetFramework="net452" />
+  <package id="Abp.Application" version="0.3.2.0" targetFramework="net452" />
   <package id="Abp.AutoMapper" version="1.0.0.0" targetFramework="net452" />
+  <package id="Abp.Castle.Log4Net" version="1.0.0.0" targetFramework="net452" />
   <package id="Abp.Quartz" version="1.0.0.0" targetFramework="net452" />
-  <package id="Abp.Zero" version="1.0.0.0" targetFramework="net452" />
   <package id="AutoMapper" version="5.1.1" targetFramework="net452" />
-  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="Castle.Core" version="3.3.0" targetFramework="net452" />
   <package id="Castle.LoggingFacility" version="3.3.0" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
+  <package id="log4net" version="2.0.5" targetFramework="net452" />
+  <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net452" />
-  <package id="NPOI" version="2.3.0" targetFramework="net452" />
-  <package id="Quartz" version="2.4.1" targetFramework="net452" />
-  <package id="sharpconfig" version="1.5.6" targetFramework="net452" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
+  <package id="Quartz" version="2.5.0" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.2.0" targetFramework="net452" />
   <package id="System.Linq.Dynamic" version="1.0.6" targetFramework="net452" />
-  <package id="TAF.Utility" version="1.0.0.5" targetFramework="net452" />
+  <package id="Topshelf" version="4.0.3" targetFramework="net452" />
 </packages>
