--- a/TAF.EntityFramework/SCBF.EntityFramework.csproj
+++ b/TAF.EntityFramework/SCBF.EntityFramework.csproj
@@ -301,11 +301,16 @@
     <Compile Include="Migrations\201705021353483_updateTable_stock4.Designer.cs">
       <DependentUpon>201705021353483_updateTable_stock4.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705101330146_addTable_ScheduledTask.cs" />
+    <Compile Include="Migrations\201705101330146_addTable_ScheduledTask.Designer.cs">
+      <DependentUpon>201705101330146_addTable_ScheduledTask.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AbpZeroDbMigrator.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\SeedData\DefaultCreator.cs" />
     <Compile Include="Migrations\SeedData\DefaultRolePermissionCreator.cs" />
     <Compile Include="Migrations\SeedData\DefaultRolesCreator.cs" />
+    <Compile Include="Migrations\SeedData\ScheduledTaskCreator.cs" />
     <Compile Include="Repositories\ActualOutlayRepository.cs" />
     <Compile Include="Repositories\BudgetOutlayRepository.cs" />
     <Compile Include="Repositories\BudgetReceiptRepository.cs" />
@@ -316,9 +321,10 @@
     <Compile Include="Repositories\LayerRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\ReceiptRepository.cs" />
+    <Compile Include="Repositories\ScheduledTaskRepository.cs" />
     <Compile Include="Repositories\StockRepository.cs" />
     <Compile Include="Repositories\SysDictionaryRepository.cs" />
-    <Compile Include="TAF.EntityFramework\Repositories\AttachmentRepository.cs" />
+    <Compile Include="Repositories\AttachmentRepository.cs" />
     <Compile Include="TAFDataModule.cs" />
     <Compile Include="Migrations\SeedData\DefaultEditionsCreator.cs" />
     <Compile Include="Migrations\SeedData\DefaultLanguagesCreator.cs" />
@@ -473,6 +479,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201705021353483_updateTable_stock4.resx">
       <DependentUpon>201705021353483_updateTable_stock4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705101330146_addTable_ScheduledTask.resx">
+      <DependentUpon>201705101330146_addTable_ScheduledTask.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
