--- a/TAF.Web/SCBF.Web.csproj
+++ b/TAF.Web/SCBF.Web.csproj
@@ -70,6 +70,9 @@
       <HintPath>..\packages\Abp.Owin.1.0.0.0\lib\net452\Abp.Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Abp.Quartz, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Abp.Quartz.1.0.0.0\lib\net452\Abp.Quartz.dll</HintPath>
+    </Reference>
     <Reference Include="Abp.Web, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Abp.Web.1.0.0.0\lib\net452\Abp.Web.dll</HintPath>
       <Private>True</Private>
@@ -114,6 +117,12 @@
     </Reference>
     <Reference Include="Castle.Windsor">
       <HintPath>..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.Logging, Version=3.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
+      <HintPath>..\packages\Common.Logging.3.3.1\lib\net40\Common.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.Logging.Core, Version=3.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
+      <HintPath>..\packages\Common.Logging.Core.3.3.1\lib\net40\Common.Logging.Core.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -207,6 +216,9 @@
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="Quartz, Version=2.4.1.0, Culture=neutral, PublicKeyToken=f6b8c98a402cc8a4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Quartz.2.4.1\lib\net40\Quartz.dll</HintPath>
     </Reference>
     <Reference Include="SharpConfig, Version=1.5.6.0, Culture=neutral, PublicKeyToken=c1deedac91bd7724, processorArchitecture=MSIL">
       <HintPath>..\packages\sharpconfig.1.5.6\lib\net20\SharpConfig.dll</HintPath>
@@ -867,6 +879,7 @@
     <Content Include="Scripts\Account\login.js" />
     <Content Include="Scripts\financeInfoIndex.js" />
     <Content Include="Scripts\receipt.js" />
+    <Content Include="Scripts\scheduledTask.js" />
     <Content Include="Scripts\sysDictionary.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -897,6 +910,7 @@
     <Compile Include="Controllers\FinanceController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\ScheduledTaskController.cs" />
     <Compile Include="Controllers\StorageController.cs" />
     <Compile Include="Controllers\SysDictionaryController.cs" />
     <Compile Include="Controllers\TAFControllerBase.cs" />
@@ -927,6 +941,9 @@
     <Content Include="Views\Account\_ChangePwd.cshtml" />
     <Content Include="Views\Home\_ProductCategory.cshtml" />
     <Content Include="Views\Shared\_Template.cshtml" />
+    <None Include="job_scheduling_data_2_0.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\PublishProfiles\public.pubxml" />
     <Content Include="Views\Storage\_ProductCategoryIndex.cshtml" />
     <Content Include="Views\SysDictionary\_SysDictionaryIndex.cshtml" />
@@ -945,6 +962,7 @@
     <Content Include="Views\ActualOutlay\_OutlayIndex.cshtml" />
     <Content Include="Views\BudgetReceipt\_ReceiptIndex.cshtml" />
     <Content Include="Views\Product\_ProductInfoIndex.cshtml" />
+    <Content Include="Views\ScheduledTask\_ScheduledTaskIndex.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
