--- a/TAF.Web/packages.config
+++ b/TAF.Web/packages.config
@@ -7,6 +7,7 @@
   <package id="Abp.EntityFramework.Common" version="1.0.0.0" targetFramework="net452" />
   <package id="Abp.HangFire" version="1.0.0.0" targetFramework="net452" />
   <package id="Abp.Owin" version="1.0.0.0" targetFramework="net452" />
+  <package id="Abp.Quartz" version="1.0.0.0" targetFramework="net452" />
   <package id="Abp.Web" version="1.0.0.0" targetFramework="net452" />
   <package id="Abp.Web.Api" version="1.0.0.0" targetFramework="net452" />
   <package id="Abp.Web.Common" version="1.0.0.0" targetFramework="net452" />
@@ -25,6 +26,8 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Castle.LoggingFacility" version="3.3.0" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.DynamicFilters" version="2.3.0" targetFramework="net452" />
   <package id="FontAwesome" version="4.4.0" targetFramework="net452" />
@@ -68,6 +71,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="Quartz" version="2.4.1" targetFramework="net452" />
   <package id="sharpconfig" version="1.5.6" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.2.0" targetFramework="net452" />
   <package id="System.Linq.Dynamic" version="1.0.6" targetFramework="net452" />
