--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -153,9 +153,9 @@
     <Compile Include="BaseInfo\Dto\AttachmentEditDto.cs" />
     <Compile Include="BaseInfo\Dto\AttachmentListDto.cs" />
     <Compile Include="BaseInfo\Dto\AttachmentQueryDto.cs" />
-    <Compile Include="BaseInfo\Dto\HisStockListDto.cs" />
-    <Compile Include="BaseInfo\Dto\HisStockQueryDto.cs" />
-    <Compile Include="BaseInfo\Dto\HisStockReportListDto.cs" />
+    <Compile Include="Storage\Dto\HisStockListDto.cs" />
+    <Compile Include="Storage\Dto\HisStockQueryDto.cs" />
+    <Compile Include="Storage\Dto\HisStockReportListDto.cs" />
     <Compile Include="BaseInfo\Dto\LayerEditDto.cs" />
     <Compile Include="BaseInfo\Dto\LayerListDto.cs" />
     <Compile Include="BaseInfo\Dto\LayerQueryDto.cs" />
@@ -163,9 +163,9 @@
     <Compile Include="BaseInfo\Dto\SysDictionaryListDto.cs" />
     <Compile Include="BaseInfo\Dto\SysDictionaryQueryDto.cs" />
     <Compile Include="BaseInfo\Dto\TreeItemDto.cs" />
-    <Compile Include="BaseInfo\HisStockAppService.cs" />
+    <Compile Include="Storage\HisStockAppService.cs" />
     <Compile Include="BaseInfo\IAttachmentAppService.cs" />
-    <Compile Include="BaseInfo\IHisStockAppService.cs" />
+    <Compile Include="Storage\IHisStockAppService.cs" />
     <Compile Include="BaseInfo\ILayerAppService.cs" />
     <Compile Include="BaseInfo\ISysDictionaryAppService.cs" />
     <Compile Include="BaseInfo\LayerAppService.cs" />
