--- a/TAF.Web/SCBF.Web.csproj
+++ b/TAF.Web/SCBF.Web.csproj
@@ -812,6 +812,7 @@
     <Content Include="Scripts\Account\changePwd.js" />
     <Content Include="Scripts\Account\user.js" />
     <Content Include="Scripts\actualOutlay.js" />
+    <Content Include="Scripts\queryStock.js" />
     <Content Include="Scripts\hisStock.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.min.js" />
@@ -969,6 +970,7 @@
     <Content Include="Views\BudgetReceipt\_ReceiptIndex.cshtml" />
     <Content Include="Views\Product\_ProductInfoIndex.cshtml" />
     <Content Include="Views\HisStock\_HisStockIndex.cshtml" />
+    <Content Include="Views\HisStock\_QueryStockList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
