完成库存清单表

--- a/Tests/TAF.Tests/SCBF.Tests.csproj
+++ b/Tests/TAF.Tests/SCBF.Tests.csproj
@@ -170,7 +170,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseInfo\TaskService_Test.cs" />
+    <Compile Include="BaseInfo\TaskServiceTests.cs" />
     <Compile Include="TAFTestModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sessions\SessionAppService_Tests.cs" />
