--- a/TAF.Web/SCBF.Web.csproj
+++ b/TAF.Web/SCBF.Web.csproj
@@ -812,6 +812,7 @@
     <Content Include="Scripts\Account\changePwd.js" />
     <Content Include="Scripts\Account\user.js" />
     <Content Include="Scripts\actualOutlay.js" />
+    <Content Include="Scripts\stock.js" />
     <Content Include="Scripts\stockChange.js" />
     <Content Include="Scripts\queryStock.js" />
     <Content Include="Scripts\hisStock.js" />
@@ -915,6 +916,7 @@
     <Compile Include="Controllers\HisStockController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\StockController.cs" />
     <Compile Include="Controllers\StorageController.cs" />
     <Compile Include="Controllers\SysDictionaryController.cs" />
     <Compile Include="Controllers\TAFControllerBase.cs" />
@@ -973,6 +975,7 @@
     <Content Include="Views\HisStock\_HisStockIndex.cshtml" />
     <Content Include="Views\HisStock\_QueryStockList.cshtml" />
     <Content Include="Views\HisStock\_StockChange.cshtml" />
+    <Content Include="Views\Stock\_StockIndex.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
